Add Lambda function to wait until the instance is in a stopped state

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Project
+wip/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -28,4 +31,4 @@ crash.log
 *.tfvars
 
 # Terraform Builds
-terraform/builds/*
+builds/*
